[gd_scene load_steps=4 format=3 uid="uid://cn1ifa611p8mp"]

[ext_resource type="Script" path="res://scripts/lobby/Lobby.gd" id="1_vbbwo"]
[ext_resource type="Script" path="res://scenes/PlayerContainerUI.gd" id="2_ds1ma"]
[ext_resource type="Script" path="res://scenes/Rebinder.gd" id="3_xrf6d"]

[node name="lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vbbwo")

[node name="rebinder" type="Node" parent="."]
script = ExtResource("3_xrf6d")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_right = 800.0
offset_bottom = 600.0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="title" type="RichTextLabel" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"Title"
bbcode_enabled = true
text = "[center][color=red]Achtung![/color] [color=yellow]Die[/color] [color=blue]Kurve![/color][/center]"
fit_content = true

[node name="player-container" type="GridContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
columns = 2
script = ExtResource("2_ds1ma")

[node name="padding" type="Control" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="start-game" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Start"

[node name="add-player-button" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Add Player"

[connection signal="player_data_changed" from="." to="MarginContainer/PanelContainer/VBoxContainer/player-container" method="_on_lobby_player_data_changed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/start-game" to="." method="_on_startgame_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/add-player-button" to="." method="_on_addplayerbutton_pressed"]
